WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167642
Compilation error in JSArrayBufferView.h
https://bugs.webkit.org/show_bug.cgi?id=167642
Summary
Compilation error in JSArrayBufferView.h
Tomas Popela
Reported
2017-01-31 07:18:45 PST
In file included from /builddir/build/BUILD/webkitgtk-2.15.4/Source/JavaScriptCore/runtime/JSGenericTypedArrayViewInlines.h:33:0, from /builddir/build/BUILD/webkitgtk-2.15.4/Source/JavaScriptCore/API/JSTypedArray.cpp:37: /builddir/build/BUILD/webkitgtk-2.15.4/Source/JavaScriptCore/runtime/JSGenericTypedArrayView.h: In member function 'const typename Adaptor::Type* JSC::JSGenericTypedArrayView<Adaptor>::typedVector() const': /builddir/build/BUILD/webkitgtk-2.15.4/Source/JavaScriptCore/runtime/JSGenericTypedArrayView.h:119:67: error: no matching function for call to 'JSC::JSGenericTypedArrayView<Adaptor>::vector() const' return bitwise_cast<const typename Adaptor::Type*>(vector()); ^ In file included from /builddir/build/BUILD/webkitgtk-2.15.4/Source/JavaScriptCore/runtime/JSArrayBufferViewInlines.h:29:0, from /builddir/build/BUILD/webkitgtk-2.15.4/Source/JavaScriptCore/API/JSTypedArray.cpp:34: /builddir/build/BUILD/webkitgtk-2.15.4/Source/JavaScriptCore/runtime/JSArrayBufferView.h:170:11: note: candidate: void* JSC::JSArrayBufferView::vector() <nearmatch> void* vector() { return m_vector.get(); } ^~~~~~ /builddir/build/BUILD/webkitgtk-2.15.4/Source/JavaScriptCore/runtime/JSArrayBufferView.h:170:11: note: passing 'const JSC::JSGenericTypedArrayView<Adaptor>*' as 'this' argument discards qualifiers
Attachments
Patch
(1.29 KB, patch)
2017-01-31 07:20 PST
,
Tomas Popela
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tomas Popela
Comment 1
2017-01-31 07:20:30 PST
Created
attachment 300218
[details]
Patch
Michael Catanzaro
Comment 2
2017-01-31 07:53:06 PST
No clue whether this is a WebKit bug or a GCC 7 bug.
Alex Christensen
Comment 3
2017-01-31 08:51:15 PST
Comment on
attachment 300218
[details]
Patch const should definitely be there
Tomas Popela
Comment 4
2017-01-31 08:53:29 PST
Comment on
attachment 300218
[details]
Patch Clearing flags on attachment: 300218 Committed
r211434
: <
http://trac.webkit.org/changeset/211434
>
Tomas Popela
Comment 5
2017-01-31 08:53:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug