Compilation error in JSArrayBufferView.h https://bugs.webkit.org/show_bug.cgi?id=167642

Reviewed by Alex Christensen.

* runtime/JSArrayBufferView.h:
(JSC::JSArrayBufferView::vector):

Change-Id: Icdcdba738279ad3b06ade95476748e2b536280e7
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@211434 268f45cc-cd09-0410-ab3c-d52691b4dbfc